--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 
     <br>
-    <p>Home   |<a href="https://electronics.sony.com/imaging/interchangeable-lens-cameras/all-interchangeable-lens-cameras/p/ilce7sm3-b">    Sony A7SIII  | </a><a href="page2.html">   Laowa 10-18mm  |</a><a href="Page3.html"> Sony 200-600mm</a>   
+    <p>Home   |<a href="https://electronics.sony.com/imaging/interchangeable-lens-cameras/all-interchangeable-lens-cameras/p/ilce7sm3-b">    Sony A7SIII  | </a><a href="Page2.html">   Laowa 10-18mm  |</a><a href="Page3.html"> Sony 200-600mm</a>   
     <hr>
     <br>
     <h1> Photography Overview</h1>
