--- a/Page2.html
+++ b/Page2.html
@@ -8,7 +8,7 @@
 
 
     <br>
-    <p><a href="index.html">Home   | </a><a href="https://electronics.sony.com/imaging/interchangeable-lens-cameras/all-interchangeable-lens-cameras/p/ilce7sm3-b">    Sony A7SIII  | </a>Laowa 10-18mm  |<a href="page3.html"> Sony 200-600mm</a>   
+    <p><a href="index.html">Home   | </a><a href="https://electronics.sony.com/imaging/interchangeable-lens-cameras/all-interchangeable-lens-cameras/p/ilce7sm3-b">    Sony A7SIII  | </a>Laowa 10-18mm  |<a href="Page3.html"> Sony 200-600mm</a>   
     <hr>
     <br>
     <h1> Laowa 10-18mm</h1>
