--- a/Page3.html
+++ b/Page3.html
@@ -8,7 +8,7 @@
 
 
     <br>
-    <p><a href="index.html">Home   | </a><a href="https://electronics.sony.com/imaging/interchangeable-lens-cameras/all-interchangeable-lens-cameras/p/ilce7sm3-b">    Sony A7SIII  | </a><a href="page2.html">   Laowa 10-18mm  |</a>Sony 200-600mm</p>   
+    <p><a href="index.html">Home   | </a><a href="https://electronics.sony.com/imaging/interchangeable-lens-cameras/all-interchangeable-lens-cameras/p/ilce7sm3-b">    Sony A7SIII  | </a><a href="Page2.html">   Laowa 10-18mm  |</a>Sony 200-600mm</p>   
     <hr>
     <br>
     <h1> Sony 200-600mm</h1>
