--- a/index.html
+++ b/index.html
@@ -25,12 +25,12 @@
     <p> click <a href="https://electronics.sony.com/imaging/interchangeable-lens-cameras/all-interchangeable-lens-cameras/p/ilce7sm3-b"> Here</a> for more info on it.</p>
    <br>
 
-    <img class="img2" src="Laowa.jpg" alt="My Wide Lens">
+    <img class="img2" src="Laowa.JPG" alt="My Wide Lens">
     <p>This is a super wide angle 10-18mm lens. </p>
     <p>Click <a href="Page2.html">Here</a> for more examples</p>
    <br>
 
-      <img class="img3" src="Sony200600.jpg" alt="My Lens">
+      <img class="img3" src="Sony200600.JPG" alt="My Lens">
       <p>This is a super zoomed in lens for it</p>
       <p>Click <a href="Page3.html">Here</a> for more examples</p>
 <br>
