--- a/Page2.html
+++ b/Page2.html
@@ -17,39 +17,39 @@
     <hr>
     <br>
     
-    <img class="img1" src="wide1.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide1.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/160s, ISO 125 </p>
     <br>
 
-    <img class="img1" src="wide2.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide2.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/100s, ISO 125 </p>
     <br>
 
-    <img class="img1" src="wide3.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide3.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/320s, ISO 125 </p>
     <br>
 
-    <img class="img1" src="wide4.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide4.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/60s, ISO 125 </p>
     <br>
 
-    <img class="img1" src="wide5.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide5.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/80s, ISO 125 </p>
     <br>
 
-    <img class="img1" src="wide6.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide6.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/50s, ISO 125 </p>
     <br>
 
-    <img class="img1" src="wide7.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide7.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/60s, ISO 125 </p>
     <br>
 
-    <img class="img1" src="wide8.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide8.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/2000s, ISO 400 </p>
     <br>
 
-    <img class="img1" src="wide9.JPG" alt="Macro Photo">
+    <img class="img1" src="Wide9.JPG" alt="Macro Photo">
     <p>18mm, f/4.5, 1/320s, ISO 400 </p>
     <br>
 <br>
