--- a/Page3.html
+++ b/Page3.html
@@ -81,43 +81,43 @@
     <p>282mm, f/6.3, 1/320, ISO 1250</p>
     <br>
 
-    <img class="img1" src="Zoom22.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom22.jpg" alt="Wildlife Photo">
     <p>282mm, f/6.3, 1/320, ISO 1250</p>
     <br>
 
-    <img class="img1" src="Zoom23.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom23.jpg" alt="Wildlife Photo">
     <p>282mm, f/6.3, 1/320, ISO 1250</p>
     <br>
 
-    <img class="img1" src="Zoom24.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom24.jpg" alt="Wildlife Photo">
     <p>282mm, f/6.3, 1/320, ISO 1250</p>
     <br>
     
-    <img class="img1" src="Zoom25.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom25.jpg" alt="Wildlife Photo">
     <p>282mm, f/6.3, 1/320, ISO 1250</p>
     <br>
 
-    <img class="img1" src="Zoom5.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom5.jpg" alt="Wildlife Photo">
     <p>600mm, f/6.3, 1/3,200s, ISO 1250</p>
     <br>
 
-    <img class="img1" src="Zoom6.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom6.jpg" alt="Wildlife Photo">
     <p>600mm, f/6.3, 1/4,000s, ISO 1250</p>
     <br>
 
-    <img class="img1" src="Zoom26.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom26.jpg" alt="Wildlife Photo">
     <p>282mm, f/6.3, 1/320, ISO 1250</p>
     <br>
 
-    <img class="img1" src="Zoom7.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom7.jpg" alt="Wildlife Photo">
     <p>594mm, f/8, 1/125s, ISO 400</p>
     <br>
 
-    <img class="img1" src="Zoom8.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom8.jpg" alt="Wildlife Photo">
     <p>600mm, f/6.3, 1/200s, ISO 400 </p>
     <br>
 
-    <img class="img1" src="Zoom9.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom9.jpg" alt="Wildlife Photo">
     <p>600mm, f/6.3, 1/200s, ISO 400</p>
     <br>
 <br>
