--- a/Page3.html
+++ b/Page3.html
@@ -69,7 +69,7 @@
     <p>282mm, f/6.3, 1/320, ISO 1250</p>
     <br>
 
-    <img class="img1" src="Zoom19.JPG" alt="Wildlife Photo">
+    <img class="img1" src="Zoom19.jpg" alt="Wildlife Photo">
     <p>282mm, f/6.3, 1/320, ISO 1250</p>
     <br>
 
